traceback.txt
I'm sorry, but an uncaught exception occurred.

While running game code:
  File "game/script.rpy", line 1365, in script
    menu:
  File "game/script.rpy", line 1366
    persistent.casaDesbloqueada = True
                                ^^^^^^
SyntaxError: invalid syntax

-- Full Traceback ------------------------------------------------------------

Traceback (most recent call last):
  File "game/script.rpy", line 1365, in script
    menu:
  File "renpy/ast.py", line 1815, in execute
    choice = renpy.exports.menu(choices, self.set, args, kwargs, item_arguments)
             ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/exports/menuexports.py", line 99, in menu
    condition = renpy.python.py_eval(condition)
                ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^
  File "renpy/python.py", line 1303, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1260, in py_compile
    raise e
  File "renpy/python.py", line 1190, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/script.rpy", line 1366
    persistent.casaDesbloqueada = True
                                ^^^^^^
SyntaxError: invalid syntax

Windows-11-10.0.26200-SP0 AMD64
Ren'Py 8.5.0.25111603
Reminiscent Dream 1.0
Mon Feb 16 18:28:23 2026
